--- a/application.properties
+++ b/application.properties
@@ -1,31 +1,18 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# Enabling H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/mydb
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
-# create database schema from SQL files
-spring.jpa.hibernate.ddl-auto=create
+spring.properties.active=test
 
+#spring.properties.active=local
 
-#Turn Statistics on and log SQL stmts
+server.port = 9091
+
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.generate_statistics=false
-#logging.level.org.hibernate.type=trace
-#logging.level.org.hibernate.stat=debug
-
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
-
-
-#spring.datasource.url=jdbc:h2:file:/data/demo
-
-
-
-#http://www.jsonschema2pojo.org
-
-#http://localhost:8080/h2-console
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
