--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,9 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'com.h2database:h2'
+	//can be switched between the DBs
+	implementation 'org.postgresql:postgresql'
+	//runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
