post dto mapping

--- a/application.properties
+++ b/application.properties
@@ -8,7 +8,7 @@ spring.properties.active=test
 
 #spring.properties.active=local
 
-server.port = 9091
+#server.port = 9091
 
 spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
