--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+	compile group: 'com.sun.mail', name: 'javax.mail', version: '1.5.5'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	//can be switched between the DBs
 	implementation 'org.postgresql:postgresql'
