--- a/build.gradle
+++ b/build.gradle
@@ -22,13 +22,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	//implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'junit:junit:4.12'
 	compileOnly 'org.projectlombok:lombok'
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 	compile group: 'com.sun.mail', name: 'javax.mail', version: '1.5.5'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	//can be switched between the DBs
 	implementation 'org.postgresql:postgresql'
-	//runtimeOnly 'com.h2database:h2'
+	testImplementation 'com.h2database:h2'
+	testImplementation 'org.junit.platform:junit-platform-commons:1.5.2'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
